--- a/css/cart.css
+++ b/css/cart.css
@@ -268,3 +268,14 @@ ul, li {
 .footer .footer-link span[data-v-33a8f468] {
     margin: 0 10px;
 }
+#nsss{
+    width: 50px;
+    height: 50px;
+}
+#nsss img{
+    width: 100%;
+}
+#bigss{
+    height: 50px;
+    overflow: hidden;
+}
